[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "yolov9"
authors = [
    { name = "Wang, Chien-Yao" },
    { name = "Liao, Hong-Yuan Mark" },
    { name = "Leaf Ying", email = "leaf.ying.work@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
